edited a typo in the notebook -fixes #36

--- a/database-servers-comparison/servers-performance.ipynb
+++ b/database-servers-comparison/servers-performance.ipynb
@@ -1316,7 +1316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "servers_performance.to_csv('serverse-performance.csv')"
+    "servers_performance.to_csv('servers-performance.csv')"
    ]
   },
   {
